src/test/deca/syntax/invalid/printx_variable.deca
// Description:
//    On utilise le mot printx comme une variable
//
// Resultats:
//    Erreur du parser ligne 11
//
// Historique:
//    Cree le 09/01/2024

{
    int printx = 3;
}
